// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form>
      Search 
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        className=""
        onClick={[Function]}
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
  <div
    className="interactions"
  >
    <div
      className="centered-content padding-2"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-spinner fa-w-16 fa-pulse fa-3x "
        data-icon="spinner"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className="fake-class"
  onClick={[Function]}
  type="button"
>
  Button Text
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form>
  Search
  <input
    onChange={[Function]}
    type="text"
  />
  <button
    className=""
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      className="width-40"
    >
      <div
        className="flex flex-justify-start"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Title
        </button>
        <div
          className="padding-horizontal-1"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="width-30"
    >
      <div
        className="flex flex-justify-start"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Author
        </button>
        <div
          className="padding-horizontal-1"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="width-10"
    >
      <div
        className="flex flex-justify-start"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Comments
        </button>
        <div
          className="padding-horizontal-1"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="width-10"
    >
      <div
        className="flex flex-justify-start"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Points
        </button>
        <div
          className="padding-horizontal-1"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="width-10"
    />
  </div>
  <div
    className="table-row"
  >
    <span
      className="width-40"
    >
      <a>
        1
      </a>
    </span>
    <span
      className="width-30"
    >
      1
    </span>
    <span
      className="width-10"
    >
      1
    </span>
    <span
      className="width-10"
    >
      2
    </span>
    <span>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      className="width-40"
    >
      <a>
        2
      </a>
    </span>
    <span
      className="width-30"
    >
      2
    </span>
    <span
      className="width-10"
    >
      1
    </span>
    <span
      className="width-10"
    >
      2
    </span>
    <span>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
